--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,22 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<style>
+			* {
+				--theme-ui-colors-primary: #0066ff;
+				--theme-ui-colors-text: #dedede;
+				--theme-ui-colors-background: #2f363d;
+				--theme-ui-colors-muted: #24292e;
+				--theme-ui-colors-border: #444d56;
+				--theme-ui-colors-icon: #959da5;
+			}
+
+			html, body {
+				background-color: var(--theme-ui-colors-background);
+				color: var(--theme-ui-colors-text);
+				font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
+			}
+		</style>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
